# toy-disentanglement

./: .gitignore  README.md  pyproject.toml
notebooks/: dataset_viz.ipynb  task_viz.ipynb  unbiased_classification.ipynb
plots/: make_figures.py  make_figures_2.py  reproduce_figures.py
scripts/: clean.py  sweep1.sh  sweep10.sh  sweep11.sh  sweep12.sh  sweep13.sh  sweep14.sh  sweep15.sh  sweep16.sh  sweep17.sh  sweep18.sh  sweep19.sh  sweep2.sh  sweep20.sh  sweep21.sh  sweep22.sh  sweep23.sh  sweep24.sh  sweep25.sh  sweep26.sh  sweep27.sh  sweep3.sh  sweep4.sh  sweep5.sh  sweep6.sh  sweep7.sh  sweep8.sh  sweep9.sh  train.py
scripts/config/: config.yaml
scripts/config/dataset/: biased_classification.yaml  biased_inv.yaml  biased_multiwavelet.yaml  biased_sin.yaml  biased_sparse_sin.yaml  biased_sparse_wavelet.yaml  biased_wavelet.yaml  gp_classification.yaml  grid_classification.yaml  sparse_mlp.yaml  unbiased_classification.yaml  unbiased_sparse_tanh.yaml  unbiased_tanh.yaml
scripts/config/embedding/: 5d_gelu_128x2_noised.yaml  5d_gelu_128x2_noiseless.yaml  5d_gelu_128x4_noiseless.yaml  5d_relu_128x2_noised.yaml  5d_relu_128x2_noiseless.yaml  5d_relu_128x4_noiseless.yaml  5d_tanh_128x2_noised.yaml  5d_tanh_128x2_noiseless.yaml  5d_tanh_128x4_noiseless.yaml  5dhs_relu_128x2_noiseless.yaml  default.yaml
scripts/config/model/: default.yaml
toy_disentanglement/: metrics.py  model.py  task.py  utils.py
